--- a/administrator/language/en-GB/com_templates.ini
+++ b/administrator/language/en-GB/com_templates.ini
@@ -237,3 +237,10 @@ COM_TEMPLATES_XML_DESCRIPTION="This component manages templates"
 JLIB_HTML_PUBLISH_ITEM="Mark as checked"
 JLIB_HTML_UNPUBLISH_ITEM="Mark as not checked"
 JLIB_RULES_SETTING_NOTES="Changes apply to this component only.<br><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br><em><strong>Allowed</strong></em> will enable the action for this component unless overruled by a Global Configuration setting."
+
+; Pagebuilder App
+COM_TEMPLATES_PAGEBUILDER_BASIC_CATEGORY="Basic"
+COM_TEMPLATES_PAGEBUILDER_JOOMLA_CATEGORY="Joomla"
+COM_TEMPLATES_PAGEBUILDER_BLOCK_BASIC_TEXT="Text"
+COM_TEMPLATES_PAGEBUILDER_BLOCK_BASIC_VIDEO="Video"
+COM_TEMPLATES_PAGEBUILDER_BLOCK_JOOMLA_COMPONENT="Component Area"
