--- a/language/en-GB/com_media.ini
+++ b/language/en-GB/com_media.ini
@@ -11,7 +11,7 @@ COM_MEDIA_ACTION_PREVIEW="Preview item"
 COM_MEDIA_ACTION_RENAME="Rename item"
 COM_MEDIA_ACTION_SHARE="Get a sharable link"
 COM_MEDIA_ALIGN="Image Float"
-COM_MEDIA_ALIGN_DESC="This will apply the classes 'float-left', 'pull-center' or 'float-right' to the '<figure>' or '<img>' element."
+COM_MEDIA_ALIGN_DESC="This will apply the classes 'float-start', 'pull-center' or 'float-end' to the '<figure>' or '<img>' element."
 COM_MEDIA_BREADCRUMB_LABEL="Breadcrumb"
 COM_MEDIA_BROWSE_FILES="Browse Files"
 COM_MEDIA_CAPTION="Caption"
